--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Base</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>Simple Base</h1>
-    <p>Coming Soon</p>
+    <h1>This is a Heading 1</h1>
+    <p>This is a paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos necessitatibus possimus!</p>
 </body>
 
 </html>
