added type specimen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
     <h1>This is a Heading 1</h1>
     <p>This is a paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos necessitatibus possimus!</p>
+
+    <hr> 
+
+    <h1 class="headline">This is a Bespoke Headline</h1>
+    <h2 class="subheadline">This is a Bespoke Sub-Headline</h2>
+    <p>This is a default body paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos necessitatibus possimus!</p>
+
+
 </body>
 
 </html>
