--- a/index.html
+++ b/index.html
@@ -9,6 +9,53 @@
 </head>
 
 <body>
+
+    <section class="demo">
+        <div class="row">
+            <div class="column">
+                <p>1 whole column</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-half column">
+                <p>&frac12; column</p>
+            </div>
+            <div class="one-half column">
+                <p>&frac12; column</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column">
+                <p>&frac13; column</p>
+            </div>
+            <div class="one-third column">
+                <p>&frac13; column</p>
+            </div>
+            <div class="one-third column">
+                <p>&frac13; column</p>
+            </div>
+        </div>
+
+    <div class="row">
+        <div class="one-fourth column">
+            &frac14;
+        </div>
+        <div class="one-fourth column">
+            &frac14;
+        </div>
+        <div class="one-fourth column">
+            &frac14;
+        </div>
+        <div class="one-fourth column">
+            &frac14;
+        </div>
+    </div>
+
+    </section>
+
+    <div class="container">
     <h1>This is a Heading 1</h1>
     <p>This is a paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos necessitatibus possimus!</p>
 
@@ -17,6 +64,7 @@
     <h1 class="headline">This is a Bespoke Headline</h1>
     <h2 class="subheadline">This is a Bespoke Sub-Headline</h2>
     <p>This is a default body paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos necessitatibus possimus!</p>
+    </div>
 
 
 </body>
