--- a/index.html
+++ b/index.html
@@ -12,58 +12,89 @@
 
     <section class="demo">
         <div class="row">
-            <div class="column">
-                <p>1 whole column</p>
+            <div class="one-whole">
+                <p>1</p>
             </div>
         </div>
 
         <div class="row">
-            <div class="one-half column">
-                <p>&frac12; column</p>
+            <div class="one-half">
+                <p>&frac12;</p>
             </div>
-            <div class="one-half column">
-                <p>&frac12; column</p>
+            <div class="one-half">
+                <p>&frac12;</p>
             </div>
         </div>
 
         <div class="row">
-            <div class="one-third column">
-                <p>&frac13; column</p>
+            <div class="one-third">
+                <p>&frac13;</p>
             </div>
-            <div class="one-third column">
-                <p>&frac13; column</p>
+            <div class="one-third">
+                <p>&frac13;</p>
             </div>
-            <div class="one-third column">
-                <p>&frac13; column</p>
+            <div class="one-third">
+                <p>&frac13;</p>
             </div>
         </div>
 
-    <div class="row">
-        <div class="one-fourth column">
-            &frac14;
+        <div class="row">
+            <div class="one-third">
+                <p>&frac13;</p>
+            </div>
+            <div class="two-thirds">
+                <p>&frac23;</p>
+            </div>
         </div>
-        <div class="one-fourth column">
-            &frac14;
+
+        <div class="row">
+            <div class="one-fourth">
+                <p>&frac14;</p>
+            </div>
+            <div class="three-fourths">
+                <p>&frac34;</p>
+            </div>
         </div>
-        <div class="one-fourth column">
-            &frac14;
+
+        <div class="row">
+            <div class="one-fourth">
+                &frac14;
+            </div>
+            <div class="one-fourth">
+                &frac14;
+            </div>
+            <div class="one-fourth">
+                &frac14;
+            </div>
+            <div class="one-fourth">
+                &frac14;
+            </div>
         </div>
-        <div class="one-fourth column">
-            &frac14;
+
+        <div class="row">
+            <div class="one-half centered">
+                <p>&frac12; center</p>
+            </div>
         </div>
-    </div>
 
     </section>
 
     <div class="container">
-    <h1>This is a Heading 1</h1>
-    <p>This is a paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos necessitatibus possimus!</p>
+        <h1>This is a Heading 1</h1>
+        <p>This is a paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic
+                text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis
+            incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos
+            necessitatibus possimus!</p>
 
-    <hr> 
+        <hr>
 
-    <h1 class="headline">This is a Bespoke Headline</h1>
-    <h2 class="subheadline">This is a Bespoke Sub-Headline</h2>
-    <p>This is a default body paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos necessitatibus possimus!</p>
+        <h1 class="headline">This is a Bespoke Headline</h1>
+        <h2 class="subheadline">This is a Bespoke Sub-Headline</h2>
+        <p>This is a default body paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is
+            <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis
+            incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos
+            necessitatibus possimus!
+        </p>
     </div>
 
 
