added grid helpers

--- a/index.html
+++ b/index.html
@@ -10,6 +10,48 @@
 
 <body>
 
+    <section>
+        <div class="container">
+
+            <div class="row vertical-centered">
+
+                <div class="one-half">
+                    <img src="https://picsum.photos/800/800" alt="Placeholder">
+                </div>
+
+                <div class="one-half">
+                    <h2>Right Column</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem ipsa
+                        adipisci ea quod et culpa exercitationem?</p>
+                </div>
+            </div>
+
+            <div class="row vertical-centered swapped">
+
+                <div class="one-half">
+                    <img src="https://picsum.photos/800/800" alt="Placeholder">
+                </div>
+
+                <div class="one-half">
+                    <h2>Left Column</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem ipsa
+                        adipisci ea quod et culpa exercitationem?</p>
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="one-half centered">
+                    <img src="https://picsum.photos/800/800" alt="Placeholder">
+                    <h2>Centered Column</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem ipsa
+                        adipisci ea quod et culpa exercitationem?</p>
+                </div>
+
+            </div>
+    </section>
+
     <section class="demo">
         <div class="row">
             <div class="one-whole">
