framework1 with variables

--- a/index.html
+++ b/index.html
@@ -10,135 +10,49 @@
 
 <body>
 
-    <section>
+    <header class="site-header">
+        <div class="site-logo">
+
+            <a href="index.html"></a> <img src="https://via.placeholder.com/500x500" alt="Site Name Logo" width="40"
+                height="40"></a>
+
+            <h1><a href="index.html">Site Name</a></h1>
+
+        </div>
+        <nav class="site-nav">
+            <ul>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="site-main">
+        [ main content goes here ]
+    </main>
+
+    <footer class="site-footer">
         <div class="container">
-
-            <div class="row vertical-centered">
-
-                <div class="one-half">
-                    <img src="https://picsum.photos/800/800" alt="Placeholder">
-                </div>
-
-                <div class="one-half">
-                    <h2>Right Column</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem ipsa
-                        adipisci ea quod et culpa exercitationem?</p>
-                </div>
-            </div>
-
-            <div class="row vertical-centered swapped">
-
-                <div class="one-half">
-                    <img src="https://picsum.photos/800/800" alt="Placeholder">
-                </div>
-
-                <div class="one-half">
-                    <h2>Left Column</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem ipsa
-                        adipisci ea quod et culpa exercitationem?</p>
-                </div>
-
-            </div>
 
             <div class="row">
 
-                <div class="one-half centered">
-                    <img src="https://picsum.photos/800/800" alt="Placeholder">
-                    <h2>Centered Column</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem ipsa
-                        adipisci ea quod et culpa exercitationem?</p>
+                <div class="two-thirds">
+                    <h2>Site Name</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni neque tempore voluptatibus impedit
+                        cum assumenda ex nesciunt blanditiis dicta natus.</p>
+                </div>
+
+                <div class="one-third">
+                    <nav class="site-nav">
+                        <ul>
+                            <li><a href="products.html">Products</a></li>
+                            <li><a href="about.html">About</a></li>
+                        </ul>
+                    </nav>
                 </div>
 
             </div>
-    </section>
-
-    <section class="demo">
-        <div class="row">
-            <div class="one-whole">
-                <p>1</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="one-half">
-                <p>&frac12;</p>
-            </div>
-            <div class="one-half">
-                <p>&frac12;</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="one-third">
-                <p>&frac13;</p>
-            </div>
-            <div class="one-third">
-                <p>&frac13;</p>
-            </div>
-            <div class="one-third">
-                <p>&frac13;</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="one-third">
-                <p>&frac13;</p>
-            </div>
-            <div class="two-thirds">
-                <p>&frac23;</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="one-fourth">
-                <p>&frac14;</p>
-            </div>
-            <div class="three-fourths">
-                <p>&frac34;</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="one-fourth">
-                &frac14;
-            </div>
-            <div class="one-fourth">
-                &frac14;
-            </div>
-            <div class="one-fourth">
-                &frac14;
-            </div>
-            <div class="one-fourth">
-                &frac14;
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="one-half centered">
-                <p>&frac12; center</p>
-            </div>
-        </div>
-
-    </section>
-
-    <div class="container">
-        <h1>This is a Heading 1</h1>
-        <p>This is a paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is <em>italic
-                text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis
-            incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos
-            necessitatibus possimus!</p>
-
-        <hr>
-
-        <h1 class="headline">This is a Bespoke Headline</h1>
-        <h2 class="subheadline">This is a Bespoke Sub-Headline</h2>
-        <p>This is a default body paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is
-            <em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur corporis
-            incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis tenetur eos
-            necessitatibus possimus!
-        </p>
-    </div>
-
+    </footer>
 
 </body>
 
