--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </div>
 
                 <div class="one-third">
+                    <h2>Pages</h2>
                     <nav class="site-nav">
                         <ul>
                             <li><a href="products.html">Products</a></li>
