--- a/index.html
+++ b/index.html
@@ -28,8 +28,197 @@
     </header>
 
     <main class="site-main">
-        [ main content goes here ]
+        <section class="hero">
+            <div class="container">
+                <div class="row">
+                    <div class="one-half">
+                        <h1>This is my hero header</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta doloribus aut ullam est
+                            nesciunt cupiditate doloremque beatae molestias, ipsam assumenda?</p>
+                    </div>
+                    <div class="one-half">
+                        <img src="https://via.placeholder.com/1600x800" alt="Hero Image" width="1600" height="800">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+
+                <div class="row">
+
+                    <div class="one-third">
+                        <img src="https://via.placeholder.com/800x800" alt="Hero Image" width="800" height="800">
+                        <h2>Heading 2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing ipsum dolor sit.</p>
+                    </div>
+
+                    <div class="one-third">
+                        <img src="https://via.placeholder.com/800x800" alt="Hero Image" width="800" height="800">
+                        <h2>Heading 2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing ipsum dolor sit.</p>
+                    </div>
+
+                    <div class="one-third">
+                        <img src="https://via.placeholder.com/800x800" alt="Hero Image" width="800" height="800">
+                        <h2>Heading 2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing ipsum dolor sit.</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+
+                <div class="row vertical-centered">
+
+                    <div class="one-half">
+                        <img src="https://picsum.photos/800/800" alt="Placeholder">
+                    </div>
+
+                    <div class="one-half">
+                        <h2>Right Column</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem
+                            ipsa
+                            adipisci ea quod et culpa exercitationem?</p>
+                    </div>
+                </div>
+
+                <div class="row vertical-centered swapped">
+
+                    <div class="one-half">
+                        <img src="https://picsum.photos/800/800" alt="Placeholder">
+                    </div>
+
+                    <div class="one-half">
+                        <h2>Left Column</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem
+                            ipsa
+                            adipisci ea quod et culpa exercitationem?</p>
+                    </div>
+
+                </div>
+
+                <div class="row">
+
+                    <div class="one-half centered">
+                        <img src="https://picsum.photos/800/800" alt="Placeholder">
+                        <h2>Centered Column</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem
+                            ipsa
+                            adipisci ea quod et culpa exercitationem?</p>
+                    </div>
+
+                </div>
+        </section>
+
+        <section class="demo">
+            <div class="container">
+                <div class="row">
+                    <div class="one-whole">
+                        <p>1</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="one-half">
+                        <p>&frac12;</p>
+                    </div>
+                    <div class="one-half">
+                        <p>&frac12;</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="one-third">
+                        <p>&frac13;</p>
+                    </div>
+                    <div class="one-third">
+                        <p>&frac13;</p>
+                    </div>
+                    <div class="one-third">
+                        <p>&frac13;</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="one-third">
+                        <p>&frac13;</p>
+                    </div>
+                    <div class="two-thirds">
+                        <p>&frac23;</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="one-fourth">
+                        <p>&frac14;</p>
+                    </div>
+                    <div class="three-fourths">
+                        <p>&frac34;</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="one-fourth">
+                        &frac14;
+                    </div>
+                    <div class="one-fourth">
+                        &frac14;
+                    </div>
+                    <div class="one-fourth">
+                        &frac14;
+                    </div>
+                    <div class="one-fourth">
+                        &frac14;
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="one-half centered">
+                        <p>&frac12; center</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <h1>This is a Heading 1</h1>
+                <h2>This is a Heading 2</h2>
+                <h3>This is a Heading 3</h3>
+                <p>This is a paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>. This is
+                    <em>italic
+                        text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis pariatur
+                    corporis
+                    incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam omnis
+                    tenetur eos
+                    necessitatibus possimus!
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <h1 class="headline">This is a Bespoke Headline</h1>
+                <h2 class="subheadline">This is a Bespoke Sub-Headline</h2>
+                <p>This is a default body paragraph. This is a <a href="#">link</a>. This is <strong>bold text</strong>.
+                    This is<em>italic text</em>. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis
+                    pariatur
+                    corporis incidunt, nemo dolore vitae ullam cum animi odio minus nesciunt repudiandae odit at, quam
+                    omnis
+                    tenetur eos necessitatibus possimus!
+                </p>
+            </div>
+        </section>
+
+
     </main>
+
 
     <footer class="site-footer">
         <div class="container">
