--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <header class="site-header">
         <div class="site-logo">
 
-            <a href="index.html"></a> <img src="https://via.placeholder.com/500x500" alt="Site Name Logo" width="40"
-                height="40"></a>
+            <a href="index.html"></a> <img src="img/whitesblogo.png" alt="Site Name Logo" width="40" height="40"></a>
 
-            <h1><a href="index.html">Site Name</a></h1>
+            <h1><a href="index.html">Simple Base</a></h1>
 
         </div>
         <nav class="site-nav">
@@ -32,12 +31,12 @@
             <div class="container">
                 <div class="row">
                     <div class="one-half">
-                        <h1>This is my hero header</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta doloribus aut ullam est
-                            nesciunt cupiditate doloremque beatae molestias, ipsam assumenda?</p>
+                        <h1>This is Simple Base</h1>
+                        <p>This is a simple base. It is a basic set of starter HTML and CSS that you can use
+                            to begin hand-coding any static website.</p>
                     </div>
                     <div class="one-half">
-                        <img src="https://via.placeholder.com/1600x800" alt="Hero Image" width="1600" height="800">
+                        <img src="img/placeholder-1600x800.gif" alt="Hero Image" width="1600" height="800">
                     </div>
                 </div>
 
@@ -50,19 +49,19 @@
                 <div class="row">
 
                     <div class="one-third">
-                        <img src="https://via.placeholder.com/800x800" alt="Hero Image" width="800" height="800">
+                        <img src="img/placeholder-800x800.gif" alt="Hero Image" width="800" height="800">
                         <h2>Heading 2</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing ipsum dolor sit.</p>
                     </div>
 
                     <div class="one-third">
-                        <img src="https://via.placeholder.com/800x800" alt="Hero Image" width="800" height="800">
+                        <img src="img/placeholder-800x800.gif" alt="Hero Image" width="800" height="800">
                         <h2>Heading 2</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing ipsum dolor sit.</p>
                     </div>
 
                     <div class="one-third">
-                        <img src="https://via.placeholder.com/800x800" alt="Hero Image" width="800" height="800">
+                        <img src="img/placeholder-800x800.gif" alt="Hero Image" width="800" height="800">
                         <h2>Heading 2</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing ipsum dolor sit.</p>
                     </div>
@@ -77,7 +76,7 @@
                 <div class="row vertical-centered">
 
                     <div class="one-half">
-                        <img src="https://picsum.photos/800/800" alt="Placeholder">
+                        <img src="img/placeholder-800x800.gif">
                     </div>
 
                     <div class="one-half">
@@ -91,7 +90,7 @@
                 <div class="row vertical-centered swapped">
 
                     <div class="one-half">
-                        <img src="https://picsum.photos/800/800" alt="Placeholder">
+                        <img src="img/placeholder-800x800.gif" alt="Placeholder">
                     </div>
 
                     <div class="one-half">
@@ -106,7 +105,7 @@
                 <div class="row">
 
                     <div class="one-half centered">
-                        <img src="https://picsum.photos/800/800" alt="Placeholder">
+                        <img src="img/placeholder-800x800.gif" alt="Placeholder">
                         <h2>Centered Column</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor aliquam ex numquam quidem
                             ipsa
